--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       <div id="controller">
         <h2>You can use a controller!</h2>
         <h2>You can save!</h2>
-        <h2>Press page down to hide these instructions.</h2>
-        <h2>Press page up to see them again.</h2>
+        <h2>Scroll down to hide these instructions.</h2>
+        <h2>Press fullscreen for proper aspect ratio!</h2>
       </div>
     </div>
     <div id="container">
