--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-		<title>Cave Story</title>
+		<title>Super Mario 64</title>
 
 		<link type="text/css" rel="stylesheet" href="css/fonts.css" />
 		<style type="text/css">
