--- a/index.html
+++ b/index.html
@@ -45,20 +45,17 @@
       <div id="keyboard">
         <h2>Keyboard Controls</h2>
         <ul>
-          <li>Movement: Arrow Keys</li>
-          <li>A: X</li>
-          <li>B: C</li>
-          <li>L: Q</li>
-          <li>Z: Space</li>
-          <li>Start: Enter</li>
-          <li>C-stick: WASD</li>
+          <li>Movement: WASD</li>
+          <li>A: L</li>
+          <li>B: ,</li>
+          <li>R: Right Shift</li>
+          <li>Z: K</li>
+          <li>Start: Space</li>
+          <li>C-stick: Arrow Keys</li>
         </ul>
       </div>
       <div id="controller">
-        <h2>You can use a controller!</h2>
-        <h2>You can save!</h2>
-        <h2>Press page down to hide these instructions.</h2>
-        <h2>Press page up to see them again.</h2>
+        <h2>Scroll/PgDown to hide, PgUp to show again.</h2>
       </div>
     </div>
     <div id="container">
